# simple-rpc

./: README.md  cabal.project  default.nix
dev/: build-time-preprocessing-issues.md  design.md  restrictions.md
evaluate/: simple-rpc-evaluate.cabal
evaluate/app/: Main.hs
example/: Setup.hs  example.cabal  plan.json  rpcConfig.json
example/app/: Main.hs  Module2.hs
example/lib/: Module0.hs  Module1.hs  Module2.hs  Module3.hs  Module4.hs
example/lib/RPC/: Module1.hs  Module2.hs  Module3.hs  Module4.hs
generate/: README.md  simple-rpc-generate.cabal
generate/app/: Main.hs
rpc/: simple-rpc.cabal
rpc/lib/Simple/: RPC.hs
rpc/lib/Simple/RPC/: Client.hs  Common.hs  Server.hs  TH.hs  Types.hs
rpc/lib/Simple/RPC/Internal/: TH.hs  Types.hs
setup/: CHANGELOG.md  simple-rpc-setup.cabal
setup/lib/Simple/RPC/: Setup.hs
