cabal-version:      2.4
name:               example
version:            0.1.0.0

common compile-options
    default-language: Haskell2010
    ghc-options:    -Weverything
                    -Wno-implicit-prelude
                    -Wno-missing-deriving-strategies
                    -Wno-missing-exported-signatures
                    -Wno-missing-import-lists
                    -Wno-missing-local-signatures
                    -Wno-missing-safe-haskell-mode
                    -Wno-missed-specialisations
                    -Wno-all-missed-specialisations
                    -Wno-monomorphism-restriction
                    -Wno-prepositive-qualified-module
                    -Wno-unsafe
                    -Rghc-timing

    if impl(ghc >= 9.2)
      ghc-options:
        -Wno-missing-kind-signatures
        -Wno-redundant-bang-patterns
        -Wno-operator-whitespace

common default-extensions
    default-extensions: TemplateHaskell
                      , QuasiQuotes
                      , ScopedTypeVariables
                      , TupleSections
                      , KindSignatures

common lib-options
    import: compile-options,  default-extensions

library
    import: lib-options
    exposed-modules: Module0
                   , Module1
                   , Module2
                   , Module3
                   , Module4
    build-depends: base
    hs-source-dirs: lib

-- <rpc-client>
-- Warning: The section between <rpc-client> and </rpc-client> is managed by the rpc
-- generator. Do not edit this by hand.

    exposed-modules:
        RPC.Module1
      , RPC.Module2
      , RPC.Module3
      , RPC.Module4
    build-depends: simple-rpc

-- </rpc-client>

-- <rpc-server>
-- Warning: The section between <rpc-server> and </rpc-server> is managed by the rpc
-- generator. Do not edit this by hand.

executable example-server
    import:
        lib-options
    main-is: Main.hs
    build-depends:
        base
      , simple-rpc
      , example
    hs-source-dirs: app
    default-language: Haskell2010

-- </rpc-server>
