cabal-version:      2.4
name:               simple-rpc-generate
version:            0.1.0.0

common compile-options
    default-language: Haskell2010
    ghc-options:    -Weverything
                    -Wno-implicit-prelude
                    -Wno-missing-deriving-strategies
                    -Wno-missing-exported-signatures
                    -Wno-missing-import-lists
                    -Wno-missing-local-signatures
                    -Wno-missing-safe-haskell-mode
                    -Wno-missed-specialisations
                    -Wno-all-missed-specialisations
                    -Wno-monomorphism-restriction
                    -Wno-prepositive-qualified-module
                    -Wno-unsafe
                    -Rghc-timing

    if impl(ghc >= 9.2)
      ghc-options:
        -Wno-missing-kind-signatures
        -Wno-redundant-bang-patterns
        -Wno-operator-whitespace

common default-extensions
    default-extensions: TemplateHaskell
                      , QuasiQuotes
                      , ScopedTypeVariables
                      , TupleSections
                      , RecordWildCards

executable simple-rpc-generate
    import: compile-options, default-extensions
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: base
                 , streamly-core
                 , prettyprinter
                 , streamly-process
                 , filepath
                 , text
                 , aeson
                 , streamly-coreutils
    default-language: Haskell2010